# grpc-gateway

./: BUILD.bazel  CONTRIBUTING.md  README.md  buf.yaml  go.mod  repositories.bzl
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  README_GITHUB.md
.github/workflows/: ci.yml  renovate.yml
docs/: _config.yml  index.md
docs/docs/: faq.md  using_custom_query_parser.md
examples/internal/: README.md
impl/casing/: BUILD.bazel
impl/codegenerator/: BUILD.bazel  parse_req_test.go
impl/descriptor/: BUILD.bazel  grpc_api_configuration.go  openapi_configuration.go  openapi_configuration_test.go  registry.go  registry_test.go  services.go  services_test.go  types.go
impl/generator/: BUILD.bazel  generator.go
impl/httprule/: BUILD.bazel  parse.go
internal/casing/: BUILD.bazel
internal/codegenerator/: BUILD.bazel  parse_req_test.go
internal/descriptor/: BUILD.bazel  grpc_api_configuration.go  openapi_configuration.go  registry.go  registry_test.go  (+4 more)
protoc-gen-grpc-gateway/: BUILD.bazel  main.go
protoc-gen-grpc-gateway/internal/gengateway/: BUILD.bazel  generator.go  generator_test.go  template.go  template_test.go
protoc-gen-openapiv2/: BUILD.bazel  main.go
runtime/: BUILD.bazel  context_test.go  convert_test.go  errors_test.go  fieldmask_test.go  handler_test.go  marshal_httpbodyproto_test.go  marshal_json_test.go  marshal_jsonpb_test.go  marshal_proto_test.go  marshaler_registry_test.go  mux.go  mux_test.go  pattern.go  pattern_test.go  query.go  query_fuzz_test.go  query_test.go
utilities/: BUILD.bazel  string_array_flag_test.go  trie_test.go
(+129 files in other folders)
